Eases delay calculation. Removes variable delay.